# wowlite

./: Cargo.toml  LICENSE  README.md
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: constants.rs
crates/net/: Cargo.toml
crates/net/src/: error.rs  event.rs  lib.rs
crates/net/src/auth/: error.rs  mod.rs  server.rs  session.rs
crates/net/src/crypto/: mod.rs  sarc4.rs  sha1randx.rs
crates/net/src/warden/: crypt.rs  error.rs  mod.rs  packet.rs
crates/net/src/world/: auth.rs  character.rs  mod.rs  session.rs
