[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
net = { path = "../net" }
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "rt-multi-thread", "sync"] }
color-eyre = "0.6.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
