[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
rc4 = "0.1.0"
sha1 = "0.10.6"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net"] }
tracing = "0.1.44"
wow_login_messages = { version = "0.5.0", features = ["sync", "tokio"] }
wow_srp = { version = "0.7.0" }
wow_world_messages = { version = "0.3.0", features = [
    "sync",
    "tokio",
    "vanilla",
] }
